css/style.css
.filter-radio {
  left: -50px;
  position: absolute;
}

.filters label {
  cursor: pointer;
}

/* add .grid selector because that is now the sibling element of the filter. call .grid and its child .filters */
#filter-all:checked ~ .grid .filters [for="filter-all"],
#filter-branding:checked ~ .grid .filters [for="filter-branding"],
#filter-ux:checked ~ .grid .filters [for="filter-ux"],
#filter-web:checked ~ .grid .filters [for="filter-web"],
#filter-illustration:checked ~ .grid .filters [for="filter-illustration"],
#filter-motion:checked ~ .grid .filters [for="filter-motion"],
#filter-print:checked ~ .grid .filters [for="filter-print"],
#filter-type:checked ~ .grid .filters [for="filter-type"],
#filter-photo:checked ~ .grid .filters [for="filter-photo"] {
  background-color: black;
  color: white;
}

#filter-all:checked ~ .filters [for="filter-all"],
#filter-branding:checked ~ .filters [for="filter-branding"],
#filter-group-2:checked ~ .filters [for="filter-group-2"],
#filter-group-3:checked ~ .filters [for="filter-group-3"] {
  background-color: red;
}

/* The ~ sibling selector will select all .filters elements, as long as they follow the preceding value*/
.filter-items > li {
  opacity: .4;
}

#filter-all:checked ~ .filter-items > li {
  opacity: 1;
}

/* > will only select direct child descendant */
#filter-branding:checked ~ .filter-items > [data-category~="branding"],
#filter-ux:checked ~ .filter-items > [data-category~="ux-ui"],
#filter-web:checked ~ .filter-items > [data-category~="web"],
#filter-illustration:checked ~ .filter-items > [data-category~="illustration"],
#filter-motion:checked ~ .filter-items > [data-category~="motion"],
#filter-print:checked ~ .filter-items > [data-category~="print"],
#filter-type:checked ~ .filter-items > [data-category~="type"],
#filter-photo:checked ~ .filter-items > [data-category~="photography"] {
  opacity: 1;
}

ul li {
  list-style-type: none;
}

.filter-btn {
  display: inline-block;
  margin: 0;
  background-color: #dcdadb;
  color: #55565b;
  padding: .5em 1em;
}

.filter-btn:hover {
  background-color: #a6a5a8;
}

.ph-graduates {
  padding-left: 0em;
  padding-right: 0em;
}

.ph-image {
  position: relative;
  float: left;
  width: 50%;
  list-style-type: none;
}

@media only screen and (min-width: 25em) {
  .ph-image {
    width: 50%;
  }
}

@media only screen and (min-width: 38em) {
  .ph-image {
    width: 25%;
  }
}

@media only screen and (min-width: 60em) {
  .ph-image {
    width: 16.6%;
  }
}

@media only screen and (min-width: 90em) {
  .ph-image {
    width: 12.5%;
  }
}

@media only screen and (min-width: 120em) {
  .ph-image {
    width: 12.5%;
  }
}

.ph-student {
  padding-left: 0;
  padding-right: 0;
}

@media only screen and (min-width: 38em) {
  .ph-student {
    padding-left: 0.6500rem;
    padding-right: 0.6500rem;
  }
}

@media only screen and (min-width: 60em) {
  .ph-student {
    padding-left: 2.6000rem;
    padding-right: 2.6000rem;
  }
}

.ph-student p {
  position: absolute;
  text-align: center;
  margin: 0;
  width: 100%;
  z-index: 10;
  padding: 0.6em 0 0.4em;
  background-color: #94959a;
  color: #fff;
  letter-spacing: 2px;
  font-size: 12px;
  font-family: "Effra", serif;
  margin-top: -2.25em;
}

.ph-partialname {
  display: block;
}

@media only screen and (min-width: 80em) {
  .ph-partialname {
    display: none;
  }
}

.ph-fullname {
  display: none;
}

@media only screen and (min-width: 80em) {
  .ph-fullname {
    display: block;
  }
}

.ph-image a {
  position: relative;
  display: block;
  padding-top: 100%;
  overflow: hidden;
}

.ph-image a:hover .ph-gradphoto-top {
  top: -100%;
}

.ph-gradphoto-top {
  position: absolute;
  top: 0;
  left: 0;
}

/*
  Gridifier || Code released under the UNLICENSE
  http://thomasjbradley.github.io/gridifier/#xs,8,0,0,0;s,8,25,0,0;m,8,38,1,1;l,8,60,1,1;xl,8,80,1,1
*/
.grid {
  margin: 0;
  padding: 0;
  letter-spacing: -0.31em;
  text-rendering: optimizespeed;
  display: -webkit-flex;
  -webkit-flex-flow: row wrap;
  display: -ms-flexbox;
  -ms-flex-flow: row wrap;
  display: flex;
  -webkit-flex-flow: row wrap;
      -ms-flex-flow: row wrap;
          flex-flow: row wrap;
}

.grid-bottom {
  -webkit-align-items: flex-end;
  -ms-align-items: flex-end;
  -ms-flex-align: end;
      align-items: flex-end;
}

.grid-middle {
  -webkit-align-items: center;
  -ms-align-items: center;
  -ms-flex-align: center;
      align-items: center;
}

.grid-stretch {
  -webkit-align-items: stretch;
  -ms-align-items: stretch;
  -ms-flex-align: stretch;
      align-items: stretch;
}

.opera-only :-o-prefocus, .grid {
  word-spacing: -0.43em;
}

.unit {
  letter-spacing: normal;
  text-rendering: auto;
  vertical-align: top;
  word-spacing: normal;
  display: inline-block;
  visibility: visible;
}

.grid-bottom .unit {
  vertical-align: bottom;
}

.grid-middle .unit {
  vertical-align: middle;
}

[class*="unit-push-"],
[class*="unit-pull-"] {
  position: relative;
}

.unit-xs-hidden {
  display: none;
  visibility: hidden;
}

.unit-xs-centered {
  margin: 0 auto;
}

.unit-xs-1, .xs-1 {
  display: block;
  visibility: visible;
  width: 100%;
}

.unit-xs-1-2, .xs-1-2 {
  width: 50.0000%;
}

.unit-xs-1-3, .xs-1-3 {
  width: 33.3333%;
}

.unit-xs-2-3, .xs-2-3 {
  width: 66.6667%;
}

.unit-xs-1-4, .xs-1-4 {
  width: 25.0000%;
}

.unit-xs-3-4, .xs-3-4 {
  width: 75.0000%;
}

.unit-xs-1-5, .xs-1-5 {
  width: 20.0000%;
}

.unit-xs-2-5, .xs-2-5 {
  width: 40.0000%;
}

.unit-xs-3-5, .xs-3-5 {
  width: 60.0000%;
}

.unit-xs-4-5, .xs-4-5 {
  width: 80.0000%;
}

.unit-xs-1-6, .xs-1-6 {
  width: 16.6667%;
}

.unit-xs-5-6, .xs-5-6 {
  width: 83.3333%;
}

.unit-xs-1-7, .xs-1-7 {
  width: 14.2857%;
}

.unit-xs-2-7, .xs-2-7 {
  width: 28.5714%;
}

.unit-xs-3-7, .xs-3-7 {
  width: 42.8571%;
}

.unit-xs-4-7, .xs-4-7 {
  width: 57.1429%;
}

.unit-xs-5-7, .xs-5-7 {
  width: 71.4286%;
}

.unit-xs-6-7, .xs-6-7 {
  width: 85.7143%;
}

.unit-xs-1-8, .xs-1-8 {
  width: 12.5000%;
}
/* ... */

